--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,33 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    android:id="@+id/home_fragment">
+
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_home1"
         android:layout_width="266dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="664dp"
         android:fontFamily="@font/nunito"
-        android:text="@string/home_title"
+        android:text="@string/home_title1"
+        android:textColor="@color/colorPrimary"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/text_home2"
+        android:layout_width="266dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="117dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="664dp"
+        android:fontFamily="@font/nunito"
+        android:text="@string/home_title2"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/text_home3"
+        android:layout_width="266dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="632dp"
+        android:fontFamily="@font/nunito"
+        android:text="@string/home_title3"
         android:textAlignment="textStart"
         android:textColor="@color/colorPrimary"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.061" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="188dp"
         android:fontFamily="@font/nunitobold"
         android:text="@string/stores_list"
         android:textColor="@color/black"
@@ -43,8 +75,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="116dp"
         android:background="@drawable/button_rounded"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
@@ -55,23 +87,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="268dp"
-    android:background="@drawable/market_basket"
-    android:checkable="true"
-    android:clickable="true"
-    android:focusable="true"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="230dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="#fff"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/market_basket" />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="356dp"
+        android:layout_marginTop="316dp"
         android:fontFamily="@font/nunitosemibold"
         android:text="@string/market_basket"
         android:textColor="@color/black"
@@ -82,21 +119,26 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="264dp"
-        android:background="@drawable/wegmans"
-        android:checkable="true"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_marginTop="230dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/wegmans" />
+    </com.google.android.material.card.MaterialCardView>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginTop="316dp"
         android:fontFamily="@font/nunitosemibold"
         android:text="@string/wegmans"
         android:textColor="@color/black"
@@ -105,23 +147,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="400dp"
-        android:background="@drawable/stop_shop"
-        android:checkable="true"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_marginTop="350dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/stop_shop" />
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="436dp"
         android:fontFamily="@font/nunitosemibold"
         android:text="@string/stop_shop"
         android:textColor="@color/black"
@@ -132,21 +179,26 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="400dp"
-        android:background="@drawable/shawns"
-        android:checkable="true"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_marginTop="350dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/shawns" />
+    </com.google.android.material.card.MaterialCardView>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="436dp"
         android:fontFamily="@font/nunitosemibold"
         android:text="@string/shawns"
         android:textColor="@color/black"
@@ -155,23 +207,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="536dp"
-        android:background="@drawable/americas_market"
-        android:checkable="true"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_marginTop="480dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/americas_market" />
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="624dp"
+        android:layout_marginTop="564dp"
         android:fontFamily="@font/nunitosemibold"
         android:text="@string/americas_food_basket"
         android:textColor="@color/black"
@@ -182,15 +239,19 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="204dp"
-        android:layout_marginTop="536dp"
-        android:background="@drawable/star_market"
+        android:layout_height="80dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginTop="480dp"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/star_market" />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -198,7 +259,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="624dp"
+        android:layout_marginTop="564dp"
         android:fontFamily="@font/nunitosemibold"
         android:text="@string/star_market"
         android:textColor="@color/black"
