--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,26 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_home"
+        android:title="@string/title_home"
+        android:enabled="true" />
 
     <item
         android:id="@+id/navigation_groceries"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_groceries" />
+        android:icon="@drawable/ic_groceries"
+        android:title="@string/title_groceries"
+        android:enabled="true" />
 
     <item
         android:id="@+id/navigation_orders"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_orders" />
+        android:icon="@drawable/ic_list"
+        android:title="@string/title_orders"
+        android:enabled="true"/>
 
     <item
         android:id="@+id/navigation_account"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_account" />
+        android:icon="@drawable/ic_account"
+        android:title="@string/title_account"
+        android:enabled="true"/>
 
 </menu>
