--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_zip_code">
+
+    <fragment
+        android:id="@+id/navigation_zip_code"
+        android:name="com.example.bestprice.ui.zipcode.ZipCodeFragment"
+        android:label="@string/title_zipcode"
+        tools:layout="@layout/fragment_zip_code"/>
 
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.bestprice.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home"/>
 
     <fragment
         android:id="@+id/navigation_groceries"
@@ -19,13 +25,12 @@
 
     <fragment
         android:id="@+id/navigation_orders"
-        android:name="com.example.bestprice.ui.notifications.NotificationsFragment"
         android:label="@string/title_orders"
         tools:layout="@layout/fragment_orders" />
 
     <fragment
         android:id="@+id/navigation_account"
-        android:name="com.example.bestprice.ui.notifications.NotificationsFragment"
+        android:name="com.example.bestprice.ui.account.AccountFragment"
         android:label="@string/title_account"
         tools:layout="@layout/fragment_account" />
 </navigation>
