--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#5EBB47</color>
     <color name="colorPrimaryDark">#00652D</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="colorOnPrimary">#fff</color>
+    <color name="colorAccent">#5EBB47</color>
+<!--    <color name="colorOnPrimary">#fff</color>-->
 
     <color name="grey">#6D7278</color>
     <color name="black">#000</color>
